--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "npm-run-all2": "^6.2.0",
     "prettier": "^3.2.5",
     "storybook": "^8.3.5",
+    "storybook-addon-mock": "^5.0.0",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
     "vue-tsc": "^2.0.21"
